# beyond-superni

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  default_25_examples.yaml  hyperbolic_only.yaml  icl.yaml  icl_big.yaml  kimi_only.yaml  qwq_only.yaml  wide.yaml
docs/: benchmark-metrics.md
src/superni_benchmark/: __init__.py  cli.py  config.py  dataset.py  metrics.py  models.py  plotting.py  runner.py
