[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beyond-superni"
version = "0.1.0"
description = "Self-contained remote benchmark harness for SuperNI across OpenAI and Hugging Face providers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "datasets>=2.21.0",
  "huggingface_hub>=0.35.0",
  "openai>=1.109.0",
  "PyYAML>=6.0.2",
  "tqdm>=4.67.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
superni-benchmark = "superni_benchmark.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
